[metadata]
url=https://wrftamer.readthedocs.io/en/latest/
maintainer=Daniel Leukauf
maintainer_email=daniel.leukauf@zsw-bw.de
description=A python packate to help you mangaging WRF projects and experiments
long_description=file:README.md
long_description_content_type=text/markdown
license=MIT
classifiers =
    Programming Language :: Python

[options]
zip_sage = False
packages = find:
python_requires = >= 3.9.0
install_requires =
    numpy
    setuptools>=30.3.0
    pandas>=1.4.2
    matplotlib
    panel
    pyyaml
    netcdf4
    xarray
    shapely>=1.7.1
    cartopy>=0.18.0
    python-crontab
    click
    holoviews
    hvplot
    windrose>=1.6.8
    wrf-python>=1.3.1
test_requires =
    pytest
    coverage

[options.extras_require]
doc =
    mkdocs
test =
    pytest
    coverage
all =
    %(doc)s
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = wrftamer/_version.py
versionfile_build = wrftamer/_version.py
tag_prefix =
parentdir_prefix =
