[metadata]
url=https://wrftamer.readthedocs.io/en/latest/
maintainer=Daniel Leukauf
maintainer_email=daniel.leukauf@zsw-bw.de
description=A python package to help you mangaging WRF projects and experiments
long_description=file:README.md
long_description_content_type=text/markdown
license=MIT
classifiers =
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
python_requires = >= 3.9.0
install_requires =
    numpy
    setuptools>=30.3.0
    pandas>=1.3.5
    matplotlib
    panel
    pyyaml
    netcdf4
    xarray
    #shapely>=1.7.1
    #cartopy>=0.18.0
    python-crontab
    click
    holoviews
    hvplot
    windrose>=1.6.8
    wrf-python>=1.3.1
test_requires =
    pytest
    coverage

[options.extras_require]
doc =
    mkdocs
test =
    pytest
    coverage
all =
    %(doc)s
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = wrftamer/_version.py
versionfile_build = wrftamer/_version.py
tag_prefix =
parentdir_prefix =

[tool:pytest]
minversion=6.0
# addopts: default
addopts =
    -m "not long and not postproc and not config_req"
    --cov-branch --cov-report xml --cov-report term
    -vv --strict-markers -rfE
markers =
    long: marks all tests that take a long time
    postproc: postprocessing tests. These require a run which is already complete.
    config_req: tests that require a working configure file.
    wip: marks all work-in-progress tests
testpaths =
    tests

[tool.black]
line-length=120


[coverage:run]
branch = True
omit =
    */tests/*
    wrftamer/_version.py
    wrftamer/__init__.py
    wrftamer/plotting/__init__.py


[coverage:report]
exclude_lines =
    pragma: no cover

[coverage:html]
directory = reports

[pylint.FORMAT]
max-line-length=120
